Continued with HTML

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
             digitales innovadoras y funcionales. Estoy participando en el emocionante proyecto Oracle ONE en Alura
             Latam, donde estoy perfeccionando mis habilidades y colaborando en soluciones de vanguardia.</p>
         <p>Conéctate conmigo en:
-            <a href="https://github.com/ValenciaTatiana" target="_blank">Github<img src="img/github.png"></a>
-            <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/" target="_blank">LinkedIn<img src="img/linkedin.png"></a>
-            <a href="https://drive.google.com/file/d/14RjQNLtBY_4PGwvdz5whEKnU351DtyxI/view" target="_blank">Mi Curriculum<img src="img/perfil-personal.png"></a>
+            <a href="https://github.com/ValenciaTatiana" target="_blank">
+                GitHub<img src="img/github.png" alt="img GitHub"></a>
+            <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/" target="_blank">
+                LinkedIn<img src="img/linkedin.png" alt="img LinkedIn"></a>
+            <a href="https://drive.google.com/file/d/14RjQNLtBY_4PGwvdz5whEKnU351DtyxI/view" target="_blank">
+                Mi Curriculum<img src="img/perfil-personal.png" alt="img Curriculum"></a>
         </p>
     </header>
     <main>
@@ -36,21 +39,67 @@
             <h2>Sobre Mi</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, deserunt sit temporibus eius dignissimos
                 alias nostrum molestias, quo, eos sequi sapiente. Explicabo doloribus commodi atque, praesentium veniam
-                quas amet sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo iste ipsa officiis neque quisquam, 
-                vitae nobis laudantium eligendi architecto odio atque, unde eius obcaecati doloribus! Iste doloribus quisquam 
-                ipsam repellat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit at provident rerum adipisci, 
-                nam labore delectus aliquid dicta, tenetur dolor odit aspernatur eligendi veniam illo eum ipsum excepturi atque vitae.</p>
+                quas amet sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo iste ipsa officiis neque
+                quisquam,
+                vitae nobis laudantium eligendi architecto odio atque, unde eius obcaecati doloribus! Iste doloribus
+                quisquam
+                ipsam repellat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit at provident rerum
+                adipisci,
+                nam labore delectus aliquid dicta, tenetur dolor odit aspernatur eligendi veniam illo eum ipsum
+                excepturi atque vitae.</p>
         </section>
         <section>
             <h2>Skills</h2>
+            <img src="img/HTML.png" alt="img HTML">
+            <img src="img/CSS.png" alt="img CSS">
+            <img src="img/JS.png" alt="img JS">
+            <img src="img/PHP.png" alt="img PHP">
+            <img src="img/MySQL.png" alt="img MySQL">
             <h2>Hobbies</h2>
+            <img src="img/Cocinar.png" alt="img Cocinar">
+            <img src="img/Dibujar.png" alt="img Dibujar">
+            <img src="img/Leer.png" alt="img Leer">
+            <img src="img/Ver Pelis.png" alt="img Ver Peliculas">
         </section>
         <section>
             <h2>Formación Academica</h2>
+            <h3>Educación Universitaria</h3>
+            <img src="img/Itm.png" alt="img ITM">
+            <p>Instituto Tecnologico Metropolitano</p>
+            <p>Actualidad</p>
+            <h3>Edcuación Complementaria</h3>
+            <img src="img/Curso de pensamiento logico.png" alt="certificado pensamiento Logico">
+            <p>Platzi</p>
+            <img src="img/Logica de Progracion sumergete.png" alt="certificado logica programación">
+            <p>Alura Latam</p>
+            <img src="img/POO PHP.png" alt="certificado POO">
+            <p>Platzi</p>
+            <img src="img/DesarrolloWebCompleto.png" alt="certificado desarrollo web completo">
+            <p>Udemy</p>
+            <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/details/certifications/" target="_blank">Más Certificados</a>
         </section>
         <section>
             <h2>Experiencia Profesional</h2>
-            <p>Proyectos</p>
+            <p>Algunos de mis proyectos</p>
+            <div>
+                <video controls>
+                    <source src="video/Encriptador de Texto.mp4" type="video/mp4">
+                </video>
+                <h3>Encriptador de texto</h3>
+                <a href="https://github.com/ValenciaTatiana/Text-Encryption-and-Decryption" target="_blank">Repositorio</a>
+
+                <video controls>
+                    <source src="video/Bienes Raices.mp4" type="video/mp4">
+                </video>
+                <h3>Bienes Raices</h3>
+                <a href="https://github.com/ValenciaTatiana/Bienes-Raices" target="_blank">Repositorio</a>
+
+                <video controls>
+                    <source src="video/UpTask.mp4" type="video/mp4">
+                </video>
+                <h3>UpTask</h3>
+                <a href="https://github.com/ValenciaTatiana/UpTask" target="_blank">Repositorio</a>
+            </div>
         </section>
         <section>
             <h2>Contactame</h2>
@@ -58,15 +107,15 @@
             <p>Complete el siguiente formulario y me pondre en contacto con usted.</p>
             <form>
                 <label for="nombre">Nombre</label>
-                    <input type="text" id="nombre">
+                <input type="text" id="nombre">
                 <label for="email">E-mail</label>
-                    <input type="email" id="email">
+                <input type="email" id="email">
                 <label for="numero">Numero</label>
-                    <input type="number" id="numero">
+                <input type="number" id="numero">
                 <label for="numero">Asunto</label>
-                    <input type="number" id="numero">
+                <input type="number" id="numero">
                 <label for="mensaje">Mensaje</label>
-                    <textarea id="mensaje">Mensaje</textarea>
+                <textarea id="mensaje">Mensaje</textarea>
             </form>
         </section>
     </main>
