--- a/index.html
+++ b/index.html
@@ -21,32 +21,35 @@
             </nav>
             <p>cuadrost31@gmail.com</p>
         </div>
-        <h1>Hola, soy Tatiana, una apasionada por el Desarrollo de Software</h1>
-        <p>Actualmente, estoy profundizando mis conocimientos en desarrollo web y me especializo en crear experiencias
-            digitales innovadoras y funcionales. Estoy participando en el emocionante proyecto Oracle ONE en Alura
-            Latam, donde estoy perfeccionando mis habilidades y colaborando en soluciones de vanguardia.</p>
-        <p>Conéctate conmigo en:
-            <a href="https://github.com/ValenciaTatiana" target="_blank">
-                GitHub<img src="img/github.png" alt="img GitHub"></a>
-            <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/" target="_blank">
-                LinkedIn<img src="img/linkedin.png" alt="img LinkedIn"></a>
-            <a href="https://drive.google.com/file/d/14RjQNLtBY_4PGwvdz5whEKnU351DtyxI/view" target="_blank">
-                Mi Curriculum<img src="img/perfil-personal.png" alt="img Curriculum"></a>
-        </p>
+        <div>
+            <h1>Hola, soy Tatiana, una apasionada por el Desarrollo de Software</h1>
+            <h2>Tengo 23 años y soy de Medellín, Colombia</h2>
+            <p>Actualmente, estoy profundizando mis conocimientos en desarrollo web en diferentes plataformas como
+                Platzi y Udemy, además de estar cursando la Tecnología de Software en mi universidad. Me especializo en
+                crear experiencias digitales innovadoras y funcionales. Estoy participando en el emocionante proyecto
+                Oracle ONE en Alura Latam, donde estoy perfeccionando mis habilidades y colaborando en soluciones de
+                vanguardia.</p>
+            <p>Conéctate conmigo en:
+                <a href="https://github.com/ValenciaTatiana" target="_blank">
+                    GitHub<img src="img/github.png" alt="img GitHub"></a>
+                <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/" target="_blank">
+                    LinkedIn<img src="img/linkedin.png" alt="img LinkedIn"></a>
+                <a href="https://drive.google.com/file/d/14RjQNLtBY_4PGwvdz5whEKnU351DtyxI/view" target="_blank">
+                    Mi Curriculum<img src="img/perfil-personal.png" alt="img Curriculum"></a>
+            </p>
+            <img src="img/Foto.jpg" alt="Foto Tatiana">
+        </div>
     </header>
     <main>
         <section>
             <h2>Sobre Mi</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, deserunt sit temporibus eius dignissimos
-                alias nostrum molestias, quo, eos sequi sapiente. Explicabo doloribus commodi atque, praesentium veniam
-                quas amet sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo iste ipsa officiis neque
-                quisquam,
-                vitae nobis laudantium eligendi architecto odio atque, unde eius obcaecati doloribus! Iste doloribus
-                quisquam
-                ipsam repellat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit at provident rerum
-                adipisci,
-                nam labore delectus aliquid dicta, tenetur dolor odit aspernatur eligendi veniam illo eum ipsum
-                excepturi atque vitae.</p>
+            <p>Mi nombre es Angie Tatiana Cuadros, una chica de 23 años a la que le apasiona el desarrollo del sofware,
+                actualmente me encuetro estudiando la tecnologia en desarrollo de sofware. Mi conocimiento abarca tanto
+                el desarrollo frontend y bakecn, utilizando tencnologias como Javascript, PHP, HTML, entre otros.
+                Mi objetivo es aplicar mis conocimientos para crear soluciones que no solo sean funcionales sino también
+                impactantes y sostenibles. Estoy comprometida con el aprendizaje continuo y me encanta colaborar con
+                otros para alcanzar metas ambiciosas.
+            </p>
         </section>
         <section>
             <h2>Skills</h2>
@@ -76,7 +79,8 @@
             <p>Platzi</p>
             <img src="img/DesarrolloWebCompleto.png" alt="certificado desarrollo web completo">
             <p>Udemy</p>
-            <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/details/certifications/" target="_blank">Más Certificados</a>
+            <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/details/certifications/"
+                target="_blank">Más Certificados</a>
         </section>
         <section>
             <h2>Experiencia Profesional</h2>
@@ -86,7 +90,8 @@
                     <source src="video/Encriptador de Texto.mp4" type="video/mp4">
                 </video>
                 <h3>Encriptador de texto</h3>
-                <a href="https://github.com/ValenciaTatiana/Text-Encryption-and-Decryption" target="_blank">Repositorio</a>
+                <a href="https://github.com/ValenciaTatiana/Text-Encryption-and-Decryption"
+                    target="_blank">Repositorio</a>
 
                 <video controls>
                     <source src="video/Bienes Raices.mp4" type="video/mp4">
