--- a/index.html
+++ b/index.html
@@ -6,39 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/codigo.png" />
     <title>Portafolio Tati​</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header>
-        <div>
-            <h3>Tatiana</h3>
-            <nav>
-                <a href="#">Sobre Mi</a>
-                <a href="#">Skills</a>
-                <a href="#">Hobbies</a>
-                <a href="#">Formación</a>
-                <a href="#">Proyectos</a>
-            </nav>
-            <p>cuadrost31@gmail.com</p>
-        </div>
-        <div>
-            <h1>Hola, soy Tatiana, una apasionada por el Desarrollo de Software</h1>
-            <h2>Tengo 23 años y soy de Medellín, Colombia</h2>
-            <p>Actualmente, estoy profundizando mis conocimientos en desarrollo web en diferentes plataformas como
-                Platzi y Udemy, además de estar cursando la Tecnología de Software en mi universidad. Me especializo en
-                crear experiencias digitales innovadoras y funcionales. Estoy participando en el emocionante proyecto
-                Oracle ONE en Alura Latam, donde estoy perfeccionando mis habilidades y colaborando en soluciones de
+    <header class="header-contenedor">
+        <section class="header-nav">
+            <h3>✨Tatiana</h3>
+            <div class="nav-contenedor">
+                <nav class="nav-enlaces">
+                    <a href="#">Sobre Mi</a>
+                    <a href="#">Skills</a>
+                    <a href="#">Hobbies</a>
+                    <a href="#">Formación</a>
+                    <a href="#">Proyectos</a>
+                </nav>
+                <p>cuadrost31@gmail.com</p>
+            </div>
+        </section>
+        <section class="presentacion-contenedor">
+            <div class="presentacion-info">
+                <h1 class="presentacion-titulo">Hola, soy Tatiana, una apasionada por el Desarrollo de Software</h1>
+                <h2 class="presentacion-subtitulo">Tengo 23 años y soy de Medellín, Colombia</h2>
+                <p class="presentacion-personal">Actualmente, estoy profundizando mis conocimientos en desarrollo web en diferentes plataformas como Platzi y Udemy, además de estar cursando la Tecnología de Software en mi universidad. Me especializo en crear experiencias digitales innovadoras y funcionales. Estoy participando en el emocionante
+                proyecto Oracle ONE en Alura Latam, donde estoy perfeccionando mis habilidades y colaborando en soluciones de
                 vanguardia.</p>
-            <p>Conéctate conmigo en:
-                <a href="https://github.com/ValenciaTatiana" target="_blank">
-                    GitHub<img src="img/github.png" alt="img GitHub"></a>
-                <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/" target="_blank">
-                    LinkedIn<img src="img/linkedin.png" alt="img LinkedIn"></a>
-                <a href="https://drive.google.com/file/d/14RjQNLtBY_4PGwvdz5whEKnU351DtyxI/view" target="_blank">
-                    Mi Curriculum<img src="img/perfil-personal.png" alt="img Curriculum"></a>
-            </p>
-            <img src="img/Foto.jpg" alt="Foto Tatiana">
-        </div>
+                    <div class="presentacion-redes">
+                        <a href="https://github.com/ValenciaTatiana" target="_blank">
+                        GitHub<img src="img/github.png" alt="img GitHub"></a>
+                    <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/" target="_blank">
+                        LinkedIn<img src="img/linkedin.png" alt="img LinkedIn"></a>
+                    <a href="https://drive.google.com/file/d/14RjQNLtBY_4PGwvdz5whEKnU351DtyxI/view" target="_blank"> 
+                        Mi Curriculum<img src="img/perfil-personal.png" alt="img Curriculum"></a>
+                    </div>
+                </p>
+            </div>
+            <img class="presentacion-foto" src="img/Foto.jpg" alt="Foto Tatiana">
+        </section>
     </header>
     <main>
         <section>
