--- a/index.html
+++ b/index.html
@@ -34,86 +34,125 @@
             <div class="presentacion-info">
                 <h1 class="presentacion-titulo">Hola, soy Tatiana, una apasionada por el Desarrollo de Software</h1>
                 <h2 class="presentacion-subtitulo">Tengo 23 años y soy de Medellín, Colombia</h2>
-                <p class="presentacion-personal">Actualmente, estoy profundizando mis conocimientos en desarrollo web en diferentes plataformas como Platzi y Udemy, además de estar cursando la Tecnología de Software en mi universidad. Me especializo en crear experiencias digitales innovadoras y funcionales. Estoy participando en el emocionante
-                proyecto Oracle ONE en Alura Latam, donde estoy perfeccionando mis habilidades y colaborando en soluciones de
-                vanguardia.</p>
-                    <div class="presentacion-redes">
-                        <a href="https://github.com/ValenciaTatiana" target="_blank">
+                <p class="presentacion-personal">Actualmente, estoy profundizando mis conocimientos en desarrollo web en
+                    diferentes plataformas como Platzi y Udemy, además de estar cursando la Tecnología de Software en mi
+                    universidad. Me especializo en crear experiencias digitales innovadoras y funcionales. Estoy
+                    participando en el emocionante
+                    proyecto Oracle ONE en Alura Latam, donde estoy perfeccionando mis habilidades.</p>
+                <div class="presentacion-redes">
+                    <a href="https://github.com/ValenciaTatiana" target="_blank">
                         GitHub<img src="img/github.png" alt="img GitHub"></a>
                     <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/" target="_blank">
                         LinkedIn<img src="img/linkedin.png" alt="img LinkedIn"></a>
-                    <a href="https://drive.google.com/file/d/14RjQNLtBY_4PGwvdz5whEKnU351DtyxI/view" target="_blank"> 
+                    <a href="https://drive.google.com/file/d/14RjQNLtBY_4PGwvdz5whEKnU351DtyxI/view" target="_blank">
                         Mi Curriculum<img src="img/perfil-personal.png" alt="img Curriculum"></a>
-                    </div>
+                </div>
                 </p>
             </div>
             <img class="presentacion-foto" src="img/Foto.jpg" alt="Foto Tatiana">
         </section>
     </header>
     <main>
-        <section>
-            <h2>Sobre Mi</h2>
-            <p>Mi nombre es Angie Tatiana Cuadros, una chica de 23 años a la que le apasiona el desarrollo del sofware,
-                actualmente me encuetro estudiando la tecnologia en desarrollo de sofware. Mi conocimiento abarca tanto
-                el desarrollo frontend y bakecn, utilizando tencnologias como Javascript, PHP, HTML, entre otros.
-                Mi objetivo es aplicar mis conocimientos para crear soluciones que no solo sean funcionales sino también
-                impactantes y sostenibles. Estoy comprometida con el aprendizaje continuo y me encanta colaborar con
-                otros para alcanzar metas ambiciosas.
+        <section class="sobre-mi-contenedor">
+            <h2 class="sobre-mi-titulo">Sobre Mi</h2>
+            <p class="sobre-mi-info">Mi nombre es Angie Tatiana Cuadros, una chica de 23 años a la que le apasiona el
+                desarrollo del software. Mi conocimiento abarca tanto el desarrollo Front End y Back End, utilizando
+                tencnologias como Javascript, PHP, HTML, entre otros.
+            </p>
+            <p class="sobre-mi-info">
+                Mi objetivo es aplicar mis conocimientos para crear soluciones impactantes y sostenibles. Estoy
+                comprometida con el aprendizaje continuo y me encanta colaborar con otros para alcanzar metas
+                ambiciosas.
             </p>
         </section>
-        <section>
-            <h2>Skills</h2>
-            <img src="img/HTML.png" alt="img HTML">
-            <img src="img/CSS.png" alt="img CSS">
-            <img src="img/JS.png" alt="img JS">
-            <img src="img/PHP.png" alt="img PHP">
-            <img src="img/MySQL.png" alt="img MySQL">
-            <h2>Hobbies</h2>
-            <img src="img/Cocinar.png" alt="img Cocinar">
-            <img src="img/Dibujar.png" alt="img Dibujar">
-            <img src="img/Leer.png" alt="img Leer">
-            <img src="img/Ver Pelis.png" alt="img Ver Peliculas">
+        <section class="contenedor-skills-hobbies">
+            <h2 class="skills-titulo">Skills</h2>
+            <div class="skills-contenedor">
+                <img src="img/HTML.png" alt="img HTML">
+                <img src="img/CSS.png" alt="img CSS">
+                <img src="img/JS.png" alt="img JS">
+                <img src="img/PHP.png" alt="img PHP">
+                <img src="img/MySQL.png" alt="img MySQL">
+            </div>
+            <h2 class="hobbies-titulo">Hobbies</h2>
+            <div class="hobbies-contenedor">
+                <img src="img/Cocinar.png" alt="img Cocinar">
+                <img src="img/Dibujar.png" alt="img Dibujar">
+                <img src="img/Leer.png" alt="img Leer">
+                <img src="img/Ver Pelis.png" alt="img Ver Peliculas">
+            </div>
         </section>
-        <section>
-            <h2>Formación Academica</h2>
-            <h3>Educación Universitaria</h3>
-            <img src="img/Itm.png" alt="img ITM">
-            <p>Instituto Tecnologico Metropolitano</p>
-            <p>Actualidad</p>
-            <h3>Edcuación Complementaria</h3>
-            <img src="img/Curso de pensamiento logico.png" alt="certificado pensamiento Logico">
-            <p>Platzi</p>
-            <img src="img/Logica de Progracion sumergete.png" alt="certificado logica programación">
-            <p>Alura Latam</p>
-            <img src="img/POO PHP.png" alt="certificado POO">
-            <p>Platzi</p>
-            <img src="img/DesarrolloWebCompleto.png" alt="certificado desarrollo web completo">
-            <p>Udemy</p>
-            <a href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/details/certifications/"
-                target="_blank">Más Certificados</a>
+        <section class="formacion-contenedor">
+            <h2 class="formacion-academica">Formación Academica</h2>
+            <h3 class="formacion-universitaria">Educación Universitaria</h3>
+            <div class="formacion-itm">
+                <img src="img/Itm.png" alt="img ITM">
+                <p class="formacion-nombre-instituto">Instituto Tecnologico Metropolitano</p>
+                <p class="formacion-duracion">Actualidad</p>
+            </div>
+            <h3 class="formacion-complementaria">Edcuación Complementaria</h3>
+            <div class="formacion-certificados">
+                <div>
+                    <img src="img/Curso de pensamiento logico.png" alt="certificado pensamiento Logico">
+                    <p class="formacion-nombre-instituto">Platzi</p>
+                    <p class="formacion-duracion">2024</p>
+                </div>
+                <div>
+                    <img src="img/Logica de Progracion sumergete.png" alt="certificado logica programación">
+                    <p class="formacion-nombre-instituto">Alura Latam</p>
+                    <p class="formacion-duracion">2024</p>
+                </div>
+                <div>
+                    <img src="img/POO PHP.png" alt="certificado POO">
+                    <p class="formacion-nombre-instituto">Platzi</p>
+                    <p class="formacion-duracion">2024</p>
+                </div>
+                <div>
+                    <img src="img/DesarrolloWebCompleto.png" alt="certificado desarrollo web completo">
+                    <p class="formacion-nombre-instituto">Udemy</p>
+                    <p class="formacion-duracion">2023</p>
+                </div>
+                <a class="formacion-mas-certificados"
+                    href="https://www.linkedin.com/in/angie-tatiana-cuadros-valencia-643576289/details/certifications/"
+                    target="_blank">Más Certificados</a>
+            </div>
+
         </section>
-        <section>
-            <h2>Experiencia Profesional</h2>
-            <p>Algunos de mis proyectos</p>
-            <div>
-                <video controls>
-                    <source src="video/Encriptador de Texto.mp4" type="video/mp4">
-                </video>
-                <h3>Encriptador de texto</h3>
-                <a href="https://github.com/ValenciaTatiana/Text-Encryption-and-Decryption"
-                    target="_blank">Repositorio</a>
-
-                <video controls>
-                    <source src="video/Bienes Raices.mp4" type="video/mp4">
-                </video>
-                <h3>Bienes Raices</h3>
-                <a href="https://github.com/ValenciaTatiana/Bienes-Raices" target="_blank">Repositorio</a>
-
-                <video controls>
-                    <source src="video/UpTask.mp4" type="video/mp4">
-                </video>
-                <h3>UpTask</h3>
-                <a href="https://github.com/ValenciaTatiana/UpTask" target="_blank">Repositorio</a>
+        <section class="experiencia-contenedor">
+            <h2 class="experiencia-titulo">Experiencia Profesional</h2>
+            <p class="experiencia-subtitulo">Algunos de mis proyectos</p>
+            <div class="experiencia-videos">
+                <div class="video-ciphertext">
+                    <video class="video" controls>
+                        <source src="video/Encriptador de Texto.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="ciphertext">
+                    <h3 class="experiencia-nombre-proyecto">Ciphertext</h3>
+                    <a class="experiencia-enlace-git"
+                        href="https://github.com/ValenciaTatiana/Text-Encryption-and-Decryption"
+                        target="_blank">Repositorio</a>
+                </div>
+                <div class="video-BR">
+                    <video class="video" controls>
+                        <source src="video/Bienes Raices.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="bienes-raices">
+                    <h3 class="experiencia-nombre-proyecto">Bienes Raices</h3>
+                    <a class="experiencia-enlace-git" href="https://github.com/ValenciaTatiana/Bienes-Raices"
+                        target="_blank">Repositorio</a>
+                </div>
+                <div class="video-UpTask">
+                    <video class="video" controls>
+                        <source src="video/UpTask.mp4" type="video/mp4">
+                    </video>
+                </div class="upTask">
+                <div>
+                    <h3 class="experiencia-nombre-proyecto">UpTask</h3>
+                    <a class="experiencia-enlace-git" href="https://github.com/ValenciaTatiana/UpTask"
+                        target="_blank">Repositorio</a>
+                </div>
             </div>
         </section>
         <section>
