Pinning the navigation bar and adding functionality to the bar to naviage the page

--- a/index.html
+++ b/index.html
@@ -16,21 +16,20 @@
 </head>
 
 <body>
+    <section class="header-nav">
+        <h3>✨Tatiana</h3>
+        <div class="nav-contenedor">
+            <nav class="nav-enlaces">
+                <a href="#sobreMi">Sobre Mi</a>
+                <a href="#skills">Skills y Hobbies</a>
+                <a href="#formacion">Formación</a>
+                <a href="#proyectos">Proyectos</a>
+            </nav>
+            <p><a href=""></a>cuadrost31@gmail.com</p>
+        </div>
+    </section>
     <header class="header-contenedor">
-        <section class="header-nav">
-            <h3>✨Tatiana</h3>
-            <div class="nav-contenedor">
-                <nav class="nav-enlaces">
-                    <a href="#">Sobre Mi</a>
-                    <a href="#">Skills</a>
-                    <a href="#">Hobbies</a>
-                    <a href="#">Formación</a>
-                    <a href="#">Proyectos</a>
-                </nav>
-                <p>cuadrost31@gmail.com</p>
-            </div>
-        </section>
-        <section class="presentacion-contenedor">
+        <section class="presentacion-contenedor" id="presentacion">
             <div class="presentacion-info">
                 <h1 class="presentacion-titulo">Hola, soy Tatiana, una apasionada por el Desarrollo de Software</h1>
                 <h2 class="presentacion-subtitulo">Tengo 23 años y soy de Medellín, Colombia</h2>
@@ -53,7 +52,7 @@
         </section>
     </header>
     <main>
-        <section class="sobre-mi-contenedor">
+        <section class="sobre-mi-contenedor" id="sobreMi">
             <h2 class="sobre-mi-titulo">Sobre Mi</h2>
             <p class="sobre-mi-info">Mi nombre es Angie Tatiana Cuadros, una chica de 23 años a la que le apasiona el
                 desarrollo del software. Mi conocimiento abarca tanto el desarrollo Front End y Back End, utilizando
@@ -65,7 +64,7 @@
                 ambiciosas.
             </p>
         </section>
-        <section class="contenedor-skills-hobbies">
+        <section class="contenedor-skills-hobbies" id="skills">
             <h2 class="skills-titulo">Skills</h2>
             <div class="skills-contenedor">
                 <img src="img/HTML.png" alt="img HTML">
@@ -82,7 +81,7 @@
                 <img src="img/Ver Pelis.png" alt="img Ver Peliculas">
             </div>
         </section>
-        <section class="formacion-contenedor">
+        <section class="formacion-contenedor" id="formacion">
             <h2 class="formacion-academica">Formación Academica</h2>
             <h3 class="formacion-universitaria">Educación Universitaria</h3>
             <div class="formacion-itm">
@@ -118,7 +117,7 @@
             </div>
 
         </section>
-        <section class="experiencia-contenedor">
+        <section class="experiencia-contenedor" id="proyectos">
             <h2 class="experiencia-titulo">Experiencia Profesional</h2>
             <p class="experiencia-subtitulo">Algunos de mis proyectos</p>
             <div class="experiencia-videos">
@@ -156,7 +155,7 @@
             </div>
         </section>
         <div class="alertas"></div>
-        <section class="contactame-contenedor">
+        <section class="contactame-contenedor" id="conta">
             <div class="formulario">
                 <h2 class="contactame-titulo">Contactame</h2>
                 <p class="contactame-subtitulo">¿Quieres que Contactame?</p>
